--- a/src/css/common.css
+++ b/src/css/common.css
@@ -53,8 +53,86 @@
   top: 15px;
 }
 
-#kdl_header .ht_right li ul {
+#kdl_header .ht_right li:nth-child(1) {
+  border: 1px solid #f9f9f9;
+  border-bottom: 0 none;
+}
+
+#kdl_header .ht_right li:nth-child(1) ul {
+  width: 97px;
   display: none;
+  background-color: #FFF;
+  position: absolute;
+  left: 0;
+  top: 35px;
+  z-index: 2;
+  padding: 5px 0;
+}
+
+#kdl_header .ht_right li:nth-child(1) ul li {
+  width: 100%;
+  height: 27px;
+  line-height: 27px;
+  border: 0 none;
+  text-align: center;
+  margin: 0 auto;
+}
+
+#kdl_header .ht_right li:nth-child(1):hover {
+  border: 1px solid #ccc;
+  border-bottom: 0 none;
+}
+
+#kdl_header .ht_right li:nth-child(1):hover ul {
+  display: block;
+  border: 1px solid #ccc;
+  border-top: 0 none;
+}
+
+#kdl_header .ht_right li:nth-child(1):hover span {
+  border-right: 1px solid #ccc;
+}
+
+#kdl_header .ht_right li:nth-child(4) {
+  border: 1px solid #f9f9f9;
+  border-bottom: 0 none;
+}
+
+#kdl_header .ht_right li:nth-child(4) ul {
+  width: 85px;
+  display: none;
+  background-color: #FFF;
+  position: absolute;
+  left: 0;
+  top: 35px;
+  z-index: 2;
+  padding: 5px 0;
+  border: 1px solid #ccc;
+  border-top: 0 none;
+}
+
+#kdl_header .ht_right li:nth-child(4) ul li {
+  width: 100%;
+  height: 27px;
+  line-height: 27px;
+  text-align: center;
+  margin: 0 auto;
+  border: 0 none;
+}
+
+#kdl_header .ht_right li:nth-child(4):hover {
+  border: 1px solid #ccc;
+  border-bottom: 0 none;
+}
+
+#kdl_header .ht_right li:nth-child(4):hover ul {
+  display: block;
+  border: 1px solid #ccc;
+  border-top: 0 none;
+}
+
+#kdl_header .ht_right li:nth-child(4):hover span {
+  border-right: 1px solid #ccc;
 }
 
 #kdl_header .ht_right li:nth-child(3) i {
@@ -233,6 +311,7 @@
 #kdl_nav .container .nav_le ul {
   width: 206px;
   height: 446px;
+  position: absolute;
   padding: 10px 0;
   background-color: #f6f6f6;
   font-family: "microsoft yahei";
@@ -249,6 +328,65 @@
   color: #000;
   font-size: 14px;
   font-weight: none;
+}
+
+#kdl_nav .container .nav_le ul li .nav_2 {
+  display: none;
+  position: absolute;
+  width: 688px;
+  height: 460px;
+  top: 0;
+  left: 206px;
+  background-color: #FFF;
+  z-index: 5;
+}
+
+#kdl_nav .container .nav_le ul li .nav_2 .item {
+  margin-left: 10px;
+  padding: 8px 0px 12px 0px;
+  border-bottom: 1px solid #eeeeee;
+}
+
+#kdl_nav .container .nav_le ul li .nav_2 .item dl dt {
+  float: left;
+  width: 90px;
+  margin-top: 6px;
+  line-height: 14px;
+  padding-right: 5px;
+  color: #f03b44;
+  font-weight: bold;
+  text-align: right;
+}
+
+#kdl_nav .container .nav_le ul li .nav_2 .item dl dd {
+  float: left;
+  height: 14px;
+  line-height: 14px;
+  padding: 0px 8px;
+  font-size: 12px;
+  color: #666666;
+  display: inline-block;
+  border-left: 1px solid #cccccc;
+  margin-top: 8px;
+}
+
+#kdl_nav .container .nav_le ul li .nav_2 .click {
+  width: 658px;
+  line-height: 30px;
+  margin: 15px;
+  background: #f6f6f6;
+  color: #6776db;
+  cursor: pointer;
+  text-align: center;
+  bottom: 10px;
+}
+
+#kdl_nav .container .nav_le ul li:hover {
+  background-color: #FFF;
+}
+
+#kdl_nav .container .nav_le ul li:hover .nav_2 {
+  display: block;
 }
 
 #kdl_nav .container .nav_cen {
@@ -273,6 +411,9 @@
 
 #kdl_nav .container .nav_cen li a .arrow {
   display: inline-block;
+  position: absolute;
+  right: 2px;
+  top: 18px;
   margin-left: 4px;
   width: 0;
   height: 0;
@@ -287,6 +428,59 @@
   height: 13px;
   background: url("../img/kdlicon.png") -369px -55px;
   margin-left: 4px;
+}
+
+#kdl_nav .container .nav_cen li:nth-child(2) {
+  position: relative;
+}
+
+#kdl_nav .container .nav_cen li:nth-child(2) ul {
+  width: 186px;
+  display: none;
+  background-color: #FFF;
+  position: absolute;
+  left: 0;
+  top: 40px;
+  z-index: 2;
+}
+
+#kdl_nav .container .nav_cen li:nth-child(2) ul li {
+  float: left;
+  width: 75px;
+  height: 22px;
+  line-height: 22px;
+  padding: 3px 9px;
+  text-align: center;
+}
+
+#kdl_nav .container .nav_cen li:nth-child(4) {
+  position: relative;
+}
+
+#kdl_nav .container .nav_cen li:nth-child(4) ul {
+  width: 100%;
+  display: none;
+  background-color: #FFF;
+  position: absolute;
+  left: 0;
+  top: 40px;
+  z-index: 2;
+}
+
+#kdl_nav .container .nav_cen li:nth-child(4) ul li {
+  width: 75px;
+  height: 22px;
+  line-height: 22px;
+  padding: 3px 9px;
+  text-align: center;
+}
+
+#kdl_nav .container .nav_cen li:nth-child(4):hover ul {
+  display: block;
+}
+
+#kdl_nav .container .nav_cen li:nth-child(2):hover ul {
+  display: block;
 }
 
 #kdl_nav .container .nav_cen li:hover {
